[gd_scene load_steps=6 format=3 uid="uid://y5kukjgawfqx"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_n5une"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="2_7nusg"]
[ext_resource type="PackedScene" uid="uid://qmbc2d4fi3vd" path="res://assets/characters/character_mesh.glb" id="2_yfens"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cdl4w"]
radius = 0.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_37fg0"]
radius = 0.3
height = 0.8

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_n5une")

[node name="CameraTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="CameraRoot" type="Node3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
top_level = true
script = ExtResource("2_7nusg")
target = NodePath("../CameraTarget")

[node name="CameraYaw" type="Node3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CameraPitch" type="Node3D" parent="CameraRoot/CameraYaw"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRoot/CameraYaw/CameraPitch"]
shape = SubResource("SphereShape3D_cdl4w")
spring_length = 4.0
margin = 0.1

[node name="Camera" type="Camera3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
current = true

[node name="CollisionCapsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("CapsuleShape3D_37fg0")

[node name="PlayerModel" parent="." instance=ExtResource("2_yfens")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="PlayerModel/character-male-d" index="0"]
bones/4/rotation = Quaternion(0, 0, -0.382683, 0.92388)
bones/5/rotation = Quaternion(0, 0, 0.382683, 0.92388)

[editable path="PlayerModel"]
